--- a/index.html
+++ b/index.html
@@ -2,11 +2,28 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 	<title>bobrik</title>
 	<link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-	Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto laborum tempore fugiat eaque harum, consequuntur nobis, reprehenderit accusamus libero iure nihil odit repellat omnis aspernatur quidem quam ullam, esse qui.
+<header>
+	<div class="header">
+		<a class="header__logo" href="./">Atelier<br>De Laconisme</a>
+		<ul class="header__menu">
+			<li><a href="#">online boutique</a></li>
+			<li><a href="#">Коллекция</a></li>
+			<li><a href="#">Философия</a></li>
+		</ul>
+
+
+
+	</div>
+</header>
+
+
+
+<footer></footer>
 	<script src="./js/jquery.min.js"></script>
 	<script src="./js/main.js"></script>
 </body>
