--- a/index.html
+++ b/index.html
@@ -15,7 +15,14 @@
 			<li><a href="#">Коллекция</a></li>
 			<li><a href="#">Философия</a></li>
 		</ul>
-
+		<div class="header__block">
+			<div class="login">
+				<a href="#" class="login__enter">Войти</a>
+			</div>
+			<div class="purchases">
+				<a href="#" class="purchases__link">Мои покупки (0)</a>
+			</div>
+		</div>
 
 
 	</div>
