--- a/index.html
+++ b/index.html
@@ -30,7 +30,20 @@
 
 
 
-<footer></footer>
+<footer>
+	<div class="footer">
+		<div class="footer__contacts">
+			<p class="footer__contacts-title">boutique</p>
+			<ul class="footer__menu">
+				<li>+7 123 345-23-32</li>
+				<li><a href="mailto:atelie@boutique.ru">ATELIA@BOUTIQUE.RU</a></li>
+				<li><a href="#" class="twitter"></a><a href="#" class="vkontakte"></a><a href="#" class="facebook"></a><a href="#" class="instagramm"></a></li>
+			</ul>
+		</div>
+
+
+	</div>
+</footer>
 	<script src="./js/jquery.min.js"></script>
 	<script src="./js/main.js"></script>
 </body>
