footer info block add

--- a/index.html
+++ b/index.html
@@ -40,6 +40,15 @@
 				<li><a href="#" class="twitter"></a><a href="#" class="vkontakte"></a><a href="#" class="facebook"></a><a href="#" class="instagramm"></a></li>
 			</ul>
 		</div>
+		<div class="footer__info">
+			<p class="footer__info-title">Информация</p>
+			<ul class="footer__menu">
+				<li><a href="#">Подарочне карты</a></li>
+				<li><a href="#">Доставка</a></li>
+				<li><a href="#">Пользовательское соглашение</a></li>
+				<li><a href="#">Обмен\возврат</a></li>
+			</ul>
+		</div>
 
 
 	</div>
