--- a/index.html
+++ b/index.html
@@ -49,9 +49,15 @@
 				<li><a href="#">Обмен\возврат</a></li>
 			</ul>
 		</div>
-
-
+		<div class="footer__language">
+			<div class="footer__language-title"></div>
+			<ul class="footer__language-select">
+				<li><a href="#" class="active">Русский</a></li>
+				<li><a href="#">English </a></li>
+			</ul>
+		</div>
 	</div>
+	<a href="#" class="footer-open"></a>
 </footer>
 	<script src="./js/jquery.min.js"></script>
 	<script src="./js/main.js"></script>
