cart popup start create

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 	<link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
+<div class="cart-popup">
+	
+</div>
 <header>
 	<div class="header">
 		<a class="header__logo" href="./">Atelier<br>De Laconisme</a>
@@ -23,13 +26,8 @@
 				<a href="#" class="purchases__link">Мои покупки (0)</a>
 			</div>
 		</div>
-
-
 	</div>
 </header>
-
-
-
 <footer>
 	<div class="footer">
 		<div class="footer__contacts">
