--- a/index.html
+++ b/index.html
@@ -7,66 +7,6 @@
 	<link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-<div class="cart-popup">
-	<div class="cart-popup__header">
-		<div class="purchases">
-			<a href="#" class="purchases__link">Мои покупки (5)</a>
-		</div>
-	</div>
-	<div class="ship-list">
-		<div class="ship-list__item">
-			<div class="ship-list__item-img">
-				<img src="./img/dress-1.jpg" alt="">
-			</div>
-			<div class="ship-list__item-info">
-				<a href="#" class="ship-list__title">Кремовая юбка</a>
-				<p class="ship-list__total">Количество <span>1</span></p>
-				<div class="ship-list__price">5600 ₷</div>
-			</div>
-		</div>
-		<div class="ship-list__item">
-			<div class="ship-list__item-img">
-				<img src="./img/dress-1.jpg" alt="">
-			</div>
-			<div class="ship-list__item-info">
-				<a href="#" class="ship-list__title">Кремовая юбка</a>
-				<p class="ship-list__total">Количество <span>1</span></p>
-				<div class="ship-list__price">5600 ₷</div>
-			</div>
-		</div>
-		<div class="ship-list__item">
-			<div class="ship-list__item-img">
-				<img src="./img/dress-1.jpg" alt="">
-			</div>
-			<div class="ship-list__item-info">
-				<a href="#" class="ship-list__title">Кремовая юбка</a>
-				<p class="ship-list__total">Количество <span>1</span></p>
-				<div class="ship-list__price">5600 ₷</div>
-			</div>
-		</div>
-		<div class="ship-list__item">
-			<div class="ship-list__item-img">
-				<img src="./img/dress-1.jpg" alt="">
-			</div>
-			<div class="ship-list__item-info">
-				<a href="#" class="ship-list__title">Кремовая юбка</a>
-				<p class="ship-list__total">Количество <span>1</span></p>
-				<div class="ship-list__price">5600 ₷</div>
-			</div>
-		</div>
-		<div class="ship-list__item">
-			<div class="ship-list__item-img">
-				<img src="./img/dress-1.jpg" alt="">
-			</div>
-			<div class="ship-list__item-info">
-				<a href="#" class="ship-list__title">Кремовая юбка</a>
-				<p class="ship-list__total">Количество <span>1</span></p>
-				<div class="ship-list__price">5600 ₷</div>
-			</div>
-		</div>
-	</div>
-	<a href="#" class="cart-popup__checkout">Оформить заказ</a>
-</div>
 <header>
 	<div class="header">
 		<a class="header__logo" href="./">Atelier<br>De Laconisme</a>
@@ -81,6 +21,72 @@
 			</div>
 			<div class="purchases">
 				<a href="#" class="purchases__link">Мои покупки (0)</a>
+				<div class="cart-popup">
+					<div class="cart-popup__header">
+						<div class="purchases">
+							<a href="#" class="purchases__link">Мои покупки (5)</a>
+						</div>
+					</div>
+					<div class="ship-list">
+						<div class="ship-list__item">
+							<div class="ship-list__item-img">
+								<img src="./img/dress-1.jpg" alt="">
+							</div>
+							<div class="ship-list__item-info">
+								<a href="#" class="ship-list__title">Кремовая юбка</a>
+								<p class="ship-list__total">Количество <span>1</span></p>
+								<div class="ship-list__price">5600 ₷</div>
+								<a href="#" class="ship-list__delete">Удалить</a>
+							</div>
+						</div>
+						<div class="ship-list__item">
+							<div class="ship-list__item-img">
+								<img src="./img/dress-1.jpg" alt="">
+							</div>
+							<div class="ship-list__item-info">
+								<a href="#" class="ship-list__title">Кремовая юбка</a>
+								<p class="ship-list__total">Количество <span>1</span></p>
+								<div class="ship-list__price">5600 ₷</div>
+								<a href="#" class="ship-list__delete">Удалить</a>
+							</div>
+						</div>
+						<div class="ship-list__item">
+							<div class="ship-list__item-img">
+								<img src="./img/dress-1.jpg" alt="">
+							</div>
+							<div class="ship-list__item-info">
+								<a href="#" class="ship-list__title">Кремовая юбка</a>
+								<p class="ship-list__total">Количество <span>1</span></p>
+								<div class="ship-list__price">5600 ₷</div>
+								<a href="#" class="ship-list__delete">Удалить</a>
+							</div>
+						</div>
+						<div class="ship-list__item">
+							<div class="ship-list__item-img">
+								<img src="./img/dress-1.jpg" alt="">
+							</div>
+							<div class="ship-list__item-info">
+								<a href="#" class="ship-list__title">Кремовая юбка</a>
+								<p class="ship-list__total">Количество <span>1</span></p>
+								<div class="ship-list__price">5600 ₷</div>
+								<a href="#" class="ship-list__delete">Удалить</a>
+							</div>
+						</div>
+						<div class="ship-list__item">
+							<div class="ship-list__item-img">
+								<img src="./img/dress-1.jpg" alt="">
+							</div>
+							<div class="ship-list__item-info">
+								<a href="#" class="ship-list__title">Кремовая юбка</a>
+								<p class="ship-list__total">Количество <span>1</span></p>
+								<div class="ship-list__price">5600 ₷</div>
+								<a href="#" class="ship-list__delete">Удалить</a>
+							</div>
+						</div>
+					</div>
+					<a href="#" class="cart-popup__checkout">Оформить заказ</a>
+					<a href="#" class="cart-popup-close"></a>
+				</div>
 			</div>
 		</div>
 	</div>
@@ -121,6 +127,8 @@
 </footer>
 	<div class="overlay"></div>
 	<script src="./js/jquery.min.js"></script>
+	<script src="./js/jquery.mousewheel.js"></script>
+	<script src="./js/jquery.jscrollpane.min.js"></script>
 	<script src="./js/main.js"></script>
 </body>
 </html>
