add catalog (navigation block)

--- a/catalog.html
+++ b/catalog.html
@@ -91,9 +91,20 @@
 		</div>
 	</div>
 </header>
+<div class="container">
+	<div class="navigation">
+		<div class="navigation__level-1">
+			<a href="#">Весна-лето 2016</a> <span>|</span> <a href="#">Осень-зима 2016</a>
+		</div>
+		<div class="navigation__level-2">
+			<a href="#">Atelier de laconisme Basic</a> <span>|</span> <a href="#">Atelier de laconisme Prime</a>
+		</div>
+	</div>
+		
 
 
 
+</div>
 <footer>
 	<div class="open"></div>
 	<div class="footer">
