add filter block

--- a/catalog.html
+++ b/catalog.html
@@ -100,6 +100,44 @@
 			<a href="#">Atelier de laconisme Basic</a> <span>|</span> <a href="#">Atelier de laconisme Prime</a>
 		</div>
 	</div>
+	<div class="content">
+		<div class="content__left">
+			<div class="filter">
+				<div class="filter__item">
+					<p class="filter__item-title">Тип</p>
+					<div class="filter__item-list">
+						<input  class="chck-round" type="checkbox" name="type" value="Жакеты" id="type-1"/>
+						<label class="chck-round" for="type-1">Жакеты</label>
+					</div>
+					<div class="filter__item-list">
+						<input  class="chck-round" type="checkbox" name="type" value="Блейзеры" id="type-2"/>
+						<label class="chck-round" for="type-2">Блейзеры</label>
+					</div>
+					<div class="filter__item-list">
+						<input  class="chck-round" type="checkbox" name="type" value="Блузка" id="type-3"/>
+						<label class="chck-round" for="type-3">Блузки</label>
+					</div>	
+					<div class="filter__item-list">
+						<input  class="chck-round" type="checkbox" name="type" value="Брюки" id="type-4"/>
+						<label class="chck-round" for="type-4">Брюки</label>
+					</div>	
+					<div class="filter__item-list">
+						<input  class="chck-round" type="checkbox" name="type" value="Аксессуары" id="type-5"/>
+						<label class="chck-round" for="type-5">Аксессуары</label>
+					</div>
+				</div>
+				<div class="filter__item">
+					<p class="filter__item-title">Размер</p>
+				</div>
+				<div class="filter__item">
+					<p class="filter__item-title">Цвета</p>
+				</div>
+			</div>
+		</div>
+		<div class="content__right">
+			
+		</div>
+	</div>
 		
 
 
