--- a/catalog.html
+++ b/catalog.html
@@ -128,14 +128,272 @@
 				</div>
 				<div class="filter__item">
 					<p class="filter__item-title">Размер</p>
+					<div class="filter__item-inline">
+						<input type="checkbox" class="chck-size" name="size" value="xs" id="size-1">
+						<label class="chck-size" for="size-1">xs</label>
+					</div>
+					<div class="filter__item-inline">
+						<input type="checkbox" class="chck-size" name="size" value="s" id="size-2">
+						<label class="chck-size" for="size-2">s</label>
+					</div>
+					<div class="filter__item-inline">
+						<input type="checkbox" class="chck-size" name="size" value="m" id="size-3">
+						<label class="chck-size" for="size-3">m</label>
+					</div>
+					<br>
+					<div class="filter__item-inline">
+						<input type="checkbox" class="chck-size" name="size" value="l" id="size-4">
+						<label class="chck-size" for="size-4">l</label>
+					</div>
+					<div class="filter__item-inline">
+						<input type="checkbox" class="chck-size" name="size" value="xl" id="size-5">
+						<label class="chck-size" for="size-5">xl</label>
+					</div>
 				</div>
-				<div class="filter__item">
+				<!-- <div class="filter__item">
 					<p class="filter__item-title">Цвета</p>
-				</div>
+					<div class="filter__item-color">
+						<input type="checkbox" class="chck-color" id="color-1" value="">
+						<label class="chck-color"></label>
+					</div>
+					<div class="filter__item-color">
+						<input type="checkbox" class="chck-color" id="color-1" value="">
+						<label class="chck-color"></label>
+					</div>
+					<div class="filter__item-color">
+						<input type="checkbox" class="chck-color" id="color-1" value="">
+						<label class="chck-color"></label>
+					</div>
+					<div class="filter__item-color">
+						<input type="checkbox" class="chck-color" id="color-1" value="">
+						<label class="chck-color"></label>
+					</div>
+					<div class="filter__item-color">
+						<input type="checkbox" class="chck-color" id="color-1" value="">
+						<label class="chck-color"></label>
+					</div>
+					<div class="filter__item-color">
+						<input type="checkbox" class="chck-color" id="color-1" value="">
+						<label class="chck-color"></label>
+					</div>
+					<div class="filter__item-color">
+						<input type="checkbox" class="chck-color" id="color-1" value="">
+						<label class="chck-color"></label>
+					</div>
+					<div class="filter__item-color">
+						<input type="checkbox" class="chck-color" id="color-1" value="">
+						<label class="chck-color"></label>
+					</div>
+					<div class="filter__item-color">
+						<input type="checkbox" class="chck-color" id="color-1" value="">
+						<label class="chck-color"></label>
+					</div>
+				</div> -->
 			</div>
 		</div>
 		<div class="content__right">
-			
+			<div class="catalog">
+				<div class="catalog__item">
+					<div class="catalog__item-img">
+						<img src="./img/dress-b-1.jpg" alt="">
+					</div>
+					<div class="catalog__item-info">
+						<div class="catalog__item-info-left">
+							<p class="product-collection">Basic</p>
+							<p class="product-title">Кремовая юбка</p>
+							<div class="product-price">5 800 ₷</div>
+						</div>
+						<div class="catalog__item-info-right">
+							<ul class="color">
+								<li class="color-1"></li>
+								<li class="color-2"></li>
+								<li class="color-3"></li>
+								<li class="color-4"></li>
+							</ul>
+						</div>
+					</div>
+				</div>
+				<div class="catalog__item">
+					<div class="catalog__item-img">
+						<img src="./img/dress-b-1.jpg" alt="">
+					</div>
+					<div class="catalog__item-info">
+						<div class="catalog__item-info-left">
+							<p class="product-collection">Basic</p>
+							<p class="product-title">Кремовая юбка</p>
+							<div class="product-price">5 800 ₷</div>
+						</div>
+						<div class="catalog__item-info-right">
+							<ul class="color">
+								<li class="color-1"></li>
+								<li class="color-2"></li>
+								<li class="color-3"></li>
+								<li class="color-4"></li>
+							</ul>
+						</div>
+					</div>
+				</div>
+				<div class="catalog__item">
+					<div class="catalog__item-img">
+						<img src="./img/dress-b-1.jpg" alt="">
+					</div>
+					<div class="catalog__item-info">
+						<div class="catalog__item-info-left">
+							<p class="product-collection">Basic</p>
+							<p class="product-title">Кремовая юбка</p>
+							<div class="product-price">5 800 ₷</div>
+						</div>
+						<div class="catalog__item-info-right">
+							<ul class="color">
+								<li class="color-1"></li>
+								<li class="color-2"></li>
+								<li class="color-3"></li>
+								<li class="color-4"></li>
+							</ul>
+						</div>
+					</div>
+				</div>
+				<div class="catalog__item">
+					<div class="catalog__item-img">
+						<img src="./img/dress-b-1.jpg" alt="">
+					</div>
+					<div class="catalog__item-info">
+						<div class="catalog__item-info-left">
+							<p class="product-collection">Basic</p>
+							<p class="product-title">Кремовая юбка</p>
+							<div class="product-price">5 800 ₷</div>
+						</div>
+						<div class="catalog__item-info-right">
+							<ul class="color">
+								<li class="color-1"></li>
+								<li class="color-2"></li>
+								<li class="color-3"></li>
+								<li class="color-4"></li>
+							</ul>
+						</div>
+					</div>
+				</div>
+				<div class="catalog__item">
+					<div class="catalog__item-img">
+						<img src="./img/dress-b-1.jpg" alt="">
+					</div>
+					<div class="catalog__item-info">
+						<div class="catalog__item-info-left">
+							<p class="product-collection">Basic</p>
+							<p class="product-title">Кремовая юбка</p>
+							<div class="product-price">5 800 ₷</div>
+						</div>
+						<div class="catalog__item-info-right">
+							<ul class="color">
+								<li class="color-1"></li>
+								<li class="color-2"></li>
+								<li class="color-3"></li>
+								<li class="color-4"></li>
+							</ul>
+						</div>
+					</div>
+				</div>
+				<div class="catalog__item">
+					<div class="catalog__item-img">
+						<img src="./img/dress-b-1.jpg" alt="">
+					</div>
+					<div class="catalog__item-info">
+						<div class="catalog__item-info-left">
+							<p class="product-collection">Basic</p>
+							<p class="product-title">Кремовая юбка</p>
+							<div class="product-price">5 800 ₷</div>
+						</div>
+						<div class="catalog__item-info-right">
+							<ul class="color">
+								<li class="color-1"></li>
+								<li class="color-2"></li>
+								<li class="color-3"></li>
+								<li class="color-4"></li>
+							</ul>
+						</div>
+					</div>
+				</div>
+				<div class="catalog__item">
+					<div class="catalog__item-img">
+						<img src="./img/dress-b-1.jpg" alt="">
+					</div>
+					<div class="catalog__item-info">
+						<div class="catalog__item-info-left">
+							<p class="product-collection">Basic</p>
+							<p class="product-title">Кремовая юбка</p>
+							<div class="product-price">5800 ₷</div>
+						</div>
+						<div class="catalog__item-info-right">
+							<ul class="color">
+								<li class="color-1"></li>
+								<li class="color-2"></li>
+								<li class="color-3"></li>
+								<li class="color-4"></li>
+							</ul>
+						</div>
+					</div>
+				</div>
+				<div class="catalog__item">
+					<div class="catalog__item-img">
+						<img src="./img/dress-b-1.jpg" alt="">
+					</div>
+					<div class="catalog__item-info">
+						<div class="catalog__item-info-left">
+							<p class="product-collection">Basic</p>
+							<p class="product-title">Кремовая юбка</p>
+							<div class="product-price">5800 ₷</div>
+						</div>
+						<div class="catalog__item-info-right">
+							<ul class="color">
+								<li class="color-1"></li>
+								<li class="color-2"></li>
+								<li class="color-3"></li>
+								<li class="color-4"></li>
+							</ul>
+						</div>
+					</div>
+				</div>
+				<div class="catalog__item">
+					<div class="catalog__item-img">
+						<img src="./img/dress-b-1.jpg" alt="">
+					</div>
+					<div class="catalog__item-info">
+						<div class="catalog__item-info-left">
+							<p class="product-collection">Basic</p>
+							<p class="product-title">Кремовая юбка</p>
+							<div class="product-price">5800 ₷</div>
+						</div>
+						<div class="catalog__item-info-right">
+							<ul class="color">
+								<li class="color-1"></li>
+								<li class="color-2"></li>
+								<li class="color-3"></li>
+								<li class="color-4"></li>
+							</ul>
+						</div>
+					</div>
+				</div>
+				<div class="catalog__item">
+					<div class="catalog__item-img">
+						<img src="./img/dress-b-1.jpg" alt="">
+					</div>
+					<div class="catalog__item-info">
+						<div class="catalog__item-info-left">
+							<p class="product-collection">Basic</p>
+							<p class="product-title">Кремовая юбка</p>
+							<div class="product-price">5800 ₷</div>
+						</div>
+						<div class="catalog__item-info-right">
+							<ul class="color">
+								<li class="color-1"></li>
+								<li class="color-2"></li>
+								<li class="color-3"></li>
+								<li class="color-4"></li>
+							</ul>
+						</div>
+					</div>
+				</div>
+			</div>
 		</div>
 	</div>
 		
