--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-	<title>bobrik</title>
+	<title>ATELIER DE LACONISME</title>
 	<link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
