--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
 			<li><a href="./catalog.html">Коллекция</a></li>
 			<li><a href="#">Философия</a></li>
 		</ul>
+		<a href="#" class="header__menu-show">
+			<span></span>
+		</a>
 		<div class="header__block">
 			<div class="login">
 				<a href="#" class="login__enter">Войти</a>
@@ -91,9 +94,6 @@
 		</div>
 	</div>
 </header>
-
-
-
 <footer>
 	<div class="open"></div>
 	<div class="footer">
@@ -125,6 +125,9 @@
 	<a href="#" class="footer-open"></a>
 </footer>
 	<div class="overlay"></div>
+	<div id="loader-wrapper">
+		<div id="loader"></div>
+	</div>
 	<script src="./js/jquery.min.js"></script>
 	<script src="./js/jquery.mousewheel.js"></script>
 	<script src="./js/jquery.jscrollpane.min.js"></script>
