--- a/catalog.html
+++ b/catalog.html
@@ -15,6 +15,9 @@
 			<li><a href="./catalog.html">Коллекция</a></li>
 			<li><a href="#">Философия</a></li>
 		</ul>
+		<a href="#" class="header__menu-show">
+			<span></span>
+		</a>
 		<div class="header__block">
 			<div class="login">
 				<a href="#" class="login__enter">Войти</a>
