catalo responsiv add

--- a/catalog.html
+++ b/catalog.html
@@ -435,6 +435,9 @@
 	<a href="#" class="footer-open"></a>
 </footer>
 	<div class="overlay"></div>
+	<div id="loader-wrapper">
+		<div id="loader"></div>
+	</div>
 	<script src="./js/jquery.min.js"></script>
 	<script src="./js/jquery.mousewheel.js"></script>
 	<script src="./js/jquery.jscrollpane.min.js"></script>
