--- a/index.html
+++ b/index.html
@@ -132,6 +132,7 @@
 	<script src="./js/jquery.min.js"></script>
 	<script src="./js/jquery.mousewheel.js"></script>
 	<script src="./js/jquery.jscrollpane.min.js"></script>
+	<script src="./js/wow.min.js"></script>
 	<script src="./js/main.js"></script>
 </body>
 </html>
